changes for ost website home page

--- a/app/views/web/ost/team.html.erb
+++ b/app/views/web/ost/team.html.erb
@@ -4,7 +4,7 @@
   <%= render :partial => "/shared/web/common/navigation_nav" , :locals => {:content => [{ :href => "#team", :title => "Team Members", :class => "nav-item col-3 col-sm-3" },
                                                                               {:href => "#advisors", :title => "Advisors Team", :class => "nav-item col-3 col-sm-3"},
                                                                               {:href => "#extendedTeam", :title => "Extended Team",  :class => "nav-item col-3 col-sm-3" } ,
-                                                                              {:href => "#earlyBackers", :title => "Early Backers", :class => "nav-item col-3 col-sm-3"}]
+                                                                              {:href => "#equityInvestors", :title => "Equity Investors", :class => "nav-item col-3 col-sm-3"}]
 
                                                                  } %>
   <%= render :partial => "/web/ost/team/team" %>
