--- a/app/views/web/ost/team/_early_backers.erb
+++ b/app/views/web/ost/team/_early_backers.erb
@@ -1,4 +1,4 @@
-<div id="earlyBackers" class="paddingTop57">
+<div id="equityInvestors" class="paddingTop57">
   <div class="container-fluid text-center">
     <div class="row early-investors">
       <div class="col-12">
