roadmap every quarter status automation

--- a/app/views/web/ost/roadmap/desktop/_2019-q3.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q3.erb
@@ -10,13 +10,13 @@
     <div class="col-2 bg-line first py-6 d-flex align-items-center">
       <div class="container-content p-15-10">
         <div class="text-bold">OpenST Protocol 0.11</div>
-        <div class="status">Status: Upcoming</div>
+        <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 3) %></div>
       </div>
     </div>
     <div class="col-2 bg-line first py-6 d-flex align-items-center">
       <div class="container-content p-15-10">
         <div class="text-bold">OpenST Mosaic Beta</div>
-        <div class="status">Status: Upcoming</div>
+        <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 3) %></div>
       </div>
     </div>
     <div class="col-4 bg-line second py-6 d-flex align-items-center">
@@ -25,13 +25,13 @@
         <div class="text-bold">OST UNIVERSAL WALLET</div>
         <div class="text-bold">OST STABLE</div>
         <div class="text-bold">OST KIT NFT</div>
-        <div class="status">Status: Upcoming</div>
+        <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 3) %></div>
       </div>
     </div>
     <div class="col-4 bg-line third py-6 align-items-center d-flex">
       <div class="container-content">
         <div class="text-bold">Redeem BT for OST, BT, ETH, BTC, and in-kind redemption partners.</div>
-        <div class="status">Status: Upcoming</div>
+        <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 3) %></div>
       </div>
     </div>
   </div>
