--- a/app/views/web/ost/roadmap/desktop/_2019-q4.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q4.erb
@@ -10,7 +10,7 @@
     <div class="col-2 bg-line first py-6 d-flex align-items-center">
       <div class="container-content p-15-10">
         <div class="text-bold">OpenST Protocol 0.12 BT-EX & BT-DEX Framework</div>
-        <div class="status">Status: Upcoming</div>
+        <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 4) %></div>
       </div>
     </div>
     <div class="col-2 bg-line first py-6 d-flex align-items-center"></div>
@@ -18,13 +18,13 @@
       <div class="container-content">
         <div class="text-bold">OST ANALYTICS</div>
         <div class="text-bold">OST ECONOMY AUTOMATION</div>
-        <div class="status">Status: Upcoming</div>
+        <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 4) %></div>
       </div>
     </div>
     <div class="col-4 bg-line third py-6 align-items-center d-flex">
       <div class="container-content">
         <div class="text-bold">Redeem BT for Fiat beta</div>
-        <div class="status">Status: Upcoming</div>
+        <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 4) %></div>
       </div>
     </div>
   </div>
