--- a/app/views/web/ost/roadmap/desktop/_2020-q1.erb
+++ b/app/views/web/ost/roadmap/desktop/_2020-q1.erb
@@ -15,13 +15,13 @@
     <div class="col-4 bg-line second py-6 d-flex align-items-center">
       <div class="container-content">
         <div class="text-bold">OST OPTIMIZATION</div>
-        <div class="status">Status: Upcoming</div>
+        <div class="status">Status: <%= get_current_quater_roadmap_status(2020, 1) %></div>
       </div>
     </div>
     <div class="col-4 bg-line third py-6 align-items-center d-flex">
       <div class="container-content">
         <div class="text-bold">Additional Currency Pairings</div>
-        <div class="status">Status: Upcoming</div>
+        <div class="status">Status: <%= get_current_quater_roadmap_status(2020, 1) %></div>
       </div>
     </div>
   </div>
