--- a/app/views/web/ost/roadmap/desktop/_2020-q3.erb
+++ b/app/views/web/ost/roadmap/desktop/_2020-q3.erb
@@ -31,13 +31,13 @@
         <div class="col-8">
           <div class="container-content">
             <div class="text-bold">OpenST Protocol 1.0: OpenST & OpenST Mosaic Fully Decentralized</div>
-            <div class="status">Status: Upcoming</div>
+            <div class="status">Status: <%= get_current_quater_roadmap_status(2020, 3) %></div>
           </div>
         </div>
         <div class="col-4 bg-line third">
           <div class="container-content">
             <div class="text-bold">Additional Currency Pairings</div>
-            <div class="status">Status: Upcoming</div>
+            <div class="status">Status: <%= get_current_quater_roadmap_status(2020, 3) %></div>
           </div>
         </div>
       </div>
