--- a/app/views/web/ost/roadmap/desktop/_2020-q4.erb
+++ b/app/views/web/ost/roadmap/desktop/_2020-q4.erb
@@ -29,7 +29,7 @@
     <div class="col-12">
       <div class="container-content">
         <div class="text-bold">OpenST 2.0: Multi-Hop Gateways</div>
-        <div class="status">Status: Upcoming</div>
+        <div class="status">Status: <%= get_current_quater_roadmap_status(2020, 4) %></div>
       </div>
     </div>
   </div>
