--- a/app/views/web/ost/roadmap/desktop/_2021-q2.erb
+++ b/app/views/web/ost/roadmap/desktop/_2021-q2.erb
@@ -29,7 +29,7 @@
     <div class="col-12">
       <div class="container-content">
         <div class="text-bold">OpenST 3.0 & OST 3.0: Additional blockchains beyond Ethereum</div>
-        <div class="status">Status: Upcoming</div>
+        <div class="status">Status: <%= get_current_quater_roadmap_status(2021, 2) %></div>
       </div>
     </div>
   </div>
