roadmap every quarter status automation

--- a/app/views/web/ost/roadmap/mobile/_developer_tools.erb
+++ b/app/views/web/ost/roadmap/mobile/_developer_tools.erb
@@ -135,7 +135,7 @@
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OST KIT Beta Security Audit</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 1) %></div>
       <ul class="desc-lines">
         <li>Wallet SDK</li>
         <li>Scalability & Performance</li>
@@ -159,7 +159,7 @@
       <div class="text-bold">OST KIT Beta</div>
       <div class="text-bold">OST Wallet SDK</div>
       <div class="text-bold">OST KYC Integration</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 2) %></div>
     </div>
   </div>
 </div>
@@ -179,7 +179,7 @@
       <div class="text-bold">OST UNIVERSAL WALLET</div>
       <div class="text-bold">OST STABLE</div>
       <div class="text-bold">OST KIT NFT</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 3) %></div>
     </div>
   </div>
 </div>
@@ -197,7 +197,7 @@
     <div class="container-content p-15-10">
       <div class="text-bold">OST ANALYTICS</div>
       <div class="text-bold">OST ECONOMY AUTOMATION</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 4) %></div>
     </div>
   </div>
 </div>
@@ -217,7 +217,7 @@
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OST OPTIMIZATION</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2020, 1) %></div>
     </div>
   </div>
 </div>
@@ -234,7 +234,7 @@
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST Protocol 1.0: OpenST & OpenST Mosaic Fully Decentralized</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2020, 2) %></div>
     </div>
   </div>
 </div>
@@ -251,7 +251,7 @@
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST 2.0: Multi-Hop Gateways</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2020, 4) %></div>
     </div>
   </div>
 </div>
@@ -268,7 +268,7 @@
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST 3.0 & OST 3.0: Additional blockchains beyond Ethereum</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2021, 2) %></div>
     </div>
   </div>
 </div>
