--- a/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
+++ b/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
@@ -26,7 +26,7 @@
   <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">Redeem BT for in-app purchases (alpha)</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 1) %></div>
     </div>
   </div>
 </div>
@@ -43,7 +43,7 @@
   <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">Redeem BT for in-app purchases</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 2) %></div>
     </div>
   </div>
 </div>
@@ -60,7 +60,7 @@
   <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">Redeem BT for OST, BT, ETH, BTC, and in-kind redemption partners.</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 3) %></div>
     </div>
   </div>
 </div>
@@ -77,7 +77,7 @@
   <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">Redeem BT for Fiat beta</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 4) %></div>
     </div>
   </div>
 </div>
@@ -97,7 +97,7 @@
   <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">Additional Currency Pairings</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2020, 1) %></div>
     </div>
   </div>
 </div>
@@ -114,7 +114,7 @@
   <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">Additional Currency Pairings</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2020, 2) %></div>
     </div>
   </div>
 </div>
@@ -131,7 +131,7 @@
   <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST 2.0: Multi-Hop Gateways</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2020, 4) %></div>
     </div>
   </div>
 </div>
@@ -148,7 +148,7 @@
   <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST 3.0 & OST 3.0: Additional blockchains beyond Ethereum</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2021, 2) %></div>
     </div>
   </div>
 </div>
