--- a/app/views/web/ost/roadmap/mobile/_infrastructure.erb
+++ b/app/views/web/ost/roadmap/mobile/_infrastructure.erb
@@ -197,13 +197,13 @@
   <div class="col-6 bg-line first pt-5 d-flex">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST Protocol 0.10.0 Mainnet Beta</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 1) %></div>
     </div>
   </div>
   <div class="col-6 bg-line first pt-5 d-flex">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST Mosaic Alpha</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 1) %></div>
     </div>
   </div>
 </div>
@@ -220,7 +220,7 @@
   <div class="col-12 bg-line first pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST Protocol 0.10</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 2) %></div>
     </div>
   </div>
 </div>
@@ -237,13 +237,13 @@
   <div class="col-6 bg-line first pt-5 d-flex">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST Protocol 0.11</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 3) %></div>
     </div>
   </div>
   <div class="col-6 bg-line first pt-5 d-flex">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST Mosaic Beta</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 3) %></div>
     </div>
   </div>
 </div>
@@ -259,7 +259,7 @@
   <div class="col-12 bg-line first pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST Protocol 0.12 BT-EX & BT-DEX Framework</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 4) %></div>
     </div>
   </div>
 </div>
@@ -275,7 +275,7 @@
   <div class="col-12 bg-line first pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST Protocol 1.0: OpenST & OpenST Mosaic Fully Decentralized</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2020, 2) %></div>
     </div>
   </div>
 </div>
@@ -291,7 +291,7 @@
   <div class="col-12 bg-line first pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST 2.0: Multi-Hop Gateways</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2020, 4) %></div>
     </div>
   </div>
 </div>
@@ -307,7 +307,7 @@
   <div class="col-12 bg-line first pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST 3.0 & OST 3.0: Additional blockchains beyond Ethereum</div>
-      <div class="status">Status: Upcoming</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2021, 2) %></div>
     </div>
   </div>
 </div>
