challenges page 2 changes

--- a/app/views/web/ost/alpha3winners.html.erb
+++ b/app/views/web/ost/alpha3winners.html.erb
@@ -5,6 +5,7 @@
 <%= render :partial => "/web/ost/alpha3winners/twitter_feed" %>
 <%= render :partial => "/web/ost/alpha3winners/poc_videos" %>
 <%= render :partial => "/web/ost/alpha3winners/news_carousel" %>
-<%= render :partial => "/web/ost/alpha3winners/subscribe" %>
+<%= render :partial => "/web/ost/winners/subscribe" %>
+<%#= render :partial => "/web/ost/alpha3winners/subscribe" %>
 <%= render :partial => "/web/ost/alpha3winners/svgs" %>
 <%= render :partial => "/shared/web/modals/help_video" %>
