--- a/app/views/web/ost/alpha3winners/_jumbotron.erb
+++ b/app/views/web/ost/alpha3winners/_jumbotron.erb
@@ -8,7 +8,7 @@
           OST Alpha III enabled developer teams to integrate OST-powered Branded Tokens into their apps using the OST KIT APIs & SDKs, and introduced the first wallet features. 92 teams from 50+ countries successfully completed the Alpha III challenge. A big thank you to all developers!
         </p>
         <a href="#winners" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="See The Winners">Watch the pocs</a>
-        <a href="/challenges" class="btn btn-secondary smooth-scroll my-2 ml-xl-3" title="Learn about OST Alpha III">Alpha III</a>
+<!--        <a href="/challenges" class="btn btn-secondary smooth-scroll my-2 ml-xl-3" title="Learn about OST Alpha III">Alpha III</a>-->
       </div>
 
       <div class="col-md-12 col-lg-6 text-center mt-3 mt-md-0">
