increased ost-in-circulation

--- a/app/views/web/ost/ost_circulation.html.erb
+++ b/app/views/web/ost/ost_circulation.html.erb
@@ -1,1 +1,1 @@
-506374398.873419269401549765<!-- random string length <%= SecureRandom.hex(SecureRandom.random_number(100) + 75) %> -->
+526062609<!-- random string length <%= SecureRandom.hex(SecureRandom.random_number(100) + 75) %> -->
