--- a/app/views/web/ost/privacy.html.erb
+++ b/app/views/web/ost/privacy.html.erb
@@ -134,7 +134,7 @@
       <p class="ml-3">
         We currently use in the specific the following cookies in order to ensure an easy experience on our website:
         - Signup/Login Cookie - auth cookie, secure auth cookie, client ID cookie. This Cookie applies to our token sale, OST KIT Signup/Login, and OST KYC Signup/Login;
-        - UTM Cookie to identify the Universal Tracking Parameters that are used in th URLs to identify the origin of a user on the website;
+        - UTM Cookie to identify the Universal Tracking Parameters that are used in th URLs to identify the origin of a user on the website; In OST KYC for the MFA & session settings we use "TM" cookie, which stores the session token along with ip_address. The default expiry for this cookie is 30 days.
       </p>
       <p>
         If you have any specific question on the Cookies we are using please do not hesitate to contact us.
