--- a/app/views/web/ost/ost_circulation.html.erb
+++ b/app/views/web/ost/ost_circulation.html.erb
@@ -1,1 +1,1 @@
-526062609<!-- random string length <%= SecureRandom.hex(SecureRandom.random_number(100) + 75) %> -->
+554943190.6413<!-- random string length <%= SecureRandom.hex(SecureRandom.random_number(100) + 75) %> -->
