navbar UI fixes

--- a/app/assets/stylesheets/web/common/_navbar.scss
+++ b/app/assets/stylesheets/web/common/_navbar.scss
@@ -37,7 +37,7 @@
     border-radius: $border-radius;
     background-color: $white;
     li{
-      margin-bottom: 8px;
+      margin-bottom: 6px;
       a{
         padding: 8px 8px!important;
         white-space: unset;
@@ -211,6 +211,7 @@
           transform: rotate(45deg);
           top: -8px;
           left: 20px;
+          z-index: -1;
           box-shadow: -1px -1px 5px -2px rgba(0, 0, 0, 0.1);
         }
       }
