--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -125,15 +125,29 @@
                 </li>
               </ul>
             </li>
-            <li>
-              <a href="https://github.com/OpenSTFoundation" target="_blank" class="nav-svg-link d-flex align-items-center" title="Github">
-                <svg class="nav-svg">
-                  <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-github-icon"></use>
-                  </switch>
-                </svg>
-                <span class="pl-1">Github</span>
-              </a>
+            <li><a href="javascript:void(0)" class="nav-svg-link d-flex align-items-center">
+              <svg class="nav-svg">
+                <switch>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-github-icon"></use>
+                </switch>
+              </svg>
+              <span class="pl-1">Github</span>
+              <span class="drop-icon drop-icon-right"></span>
+              <label title="Toggle Drop-down" class="drop-icon drop-icon-right navbar-toggler" for="devChallenges" data-toggle="collapse" data-target="#navbarToggler7" aria-controls="navbarToggler7" aria-expanded="false" aria-label="Toggle navigation"></label>
+            </a>
+              <input type="checkbox" id="devChallenges">
+              <ul class="sub-menu list-unstyled pt-2 px-3 px-md-1 m-0 collapse" id="navbarToggler7">
+                <li>
+                  <a href="https://github.com/orgs/OpenSTFoundation/" target="_blank" class="nav-svg-link d-flex align-items-center" title="OpenSt Foundation Github">
+                    <span class="pl-1">OpenSt Foundation</span>
+                  </a>
+                </li>
+                <li class="mb-0 mb-md-2">
+                  <a href="https://github.com/orgs/ostdotcom/" target="_blank" class="nav-svg-link d-flex align-items-center" title="Ostdotcom Github">
+                    <span class="pl-1">Ostdotcom</span>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li>
               <a href="https://gitter.im/OpenSTFoundation/SimpleToken" target="_blank" class="nav-svg-link d-flex align-items-center" title="Developer Chat">
@@ -251,11 +265,11 @@
               <span class="header-social-medium-icon"></span>
             </a>
           </li>
-<!--          <li class="ml-2">-->
-<!--            <a href="https://www.linkedin.com/company/18209852" target="_blank" title="OST - Linkedin">-->
-<!--              <span class="header-social-linkedIn-icon"></span>-->
-<!--            </a>-->
-<!--          </li>-->
+          <li class="ml-2">
+            <a href="https://www.linkedin.com/company/18209852" target="_blank" title="OST - Linkedin">
+              <span class="header-social-linkedIn-icon"></span>
+            </a>
+          </li>
           <li class="ml-2">
             <a href="https://www.facebook.com/OST" target="_blank" title="OST - Facebook">
               <span class="header-social-facebook-icon"></span>
@@ -266,9 +280,14 @@
               <span class="header-social-youtube-icon"></span>
             </a>
           </li>
+<!--          <li class="ml-2">-->
+<!--            <a href=" https://github.com/OpenSTFoundation" target="_blank" title="OST - Github">-->
+<!--              <span class="header-social-github-icon"></span>-->
+<!--            </a>-->
+<!--          </li>-->
           <li class="ml-2">
-            <a href=" https://github.com/OpenSTFoundation" target="_blank" title="OST - Github">
-              <span class="header-social-github-icon"></span>
+            <a href="https://gitter.im/OpenSTFoundation/SimpleToken" target="_blank" title="OST - Gitter">
+              <span class="header-social-gitter-icon"></span>
             </a>
           </li>
         </ul>
