footer UI fixes

--- a/app/assets/stylesheets/web/common/_footer.scss
+++ b/app/assets/stylesheets/web/common/_footer.scss
@@ -24,8 +24,8 @@
   li{
     margin: 12px 0;
     font-weight: 300;
-    letter-spacing: 1px;
-    font-size: 0.875rem;
+    letter-spacing: 0.5px;
+    font-size: 14px;
     a{
       color: #597a84;
       &:hover{
