--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -119,7 +119,7 @@
                   </a>
                 </li>
                 <li class="mb-0 mb-md-2">
-                  <a href="https://github.com/OpenSTFoundation/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" target="_blank" class="nav-svg-link d-flex align-items-center" title="Mosaic Protocol">
+                  <a href="https://github.com/OpenST/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" target="_blank" class="nav-svg-link d-flex align-items-center" title="Mosaic Protocol">
                     <span class="pl-1">Mosaic Protocol</span>
                   </a>
                 </li>
@@ -138,13 +138,13 @@
               <input type="checkbox" id="devChallenges">
               <ul class="sub-menu list-unstyled pt-2 px-3 px-md-1 m-0 collapse" id="navbarToggler7">
                 <li>
-                  <a href="https://github.com/orgs/OpenSTFoundation/" target="_blank" class="nav-svg-link d-flex align-items-center" title="OpenSt Foundation Github">
+                  <a href="https://github.com/OpenST" target="_blank" class="nav-svg-link d-flex align-items-center" title="OpenSt Foundation Github">
                     <span class="pl-1">OpenSt Foundation</span>
                   </a>
                 </li>
                 <li class="mb-0 mb-md-2">
                   <a href="https://github.com/orgs/ostdotcom/" target="_blank" class="nav-svg-link d-flex align-items-center" title="Ostdotcom Github">
-                    <span class="pl-1">Ostdotcom</span>
+                    <span class="pl-1">OST</span>
                   </a>
                 </li>
               </ul>
