--- a/app/views/web/ost/index/_blockchain_infra.erb
+++ b/app/views/web/ost/index/_blockchain_infra.erb
@@ -6,7 +6,7 @@
           <h2>Scalable Token Economies</h2>
           <p>OST is designed for internet-grade transaction volumes and speeds. OST leads development of the OpenST Protocol for launching Branded Token economies for mainstream businesses and OpenST Mosaic, a scaling solution for finalizing many thousands of transactions per second asynchronously on Ethereum at low cost.</p>
           <div class="my-4">
-            <a href="https://github.com/OpenSTFoundation" class="btn btn-primary my-2 my-md-3" title="GITHUB" target="_blank">GITHUB</a>
+            <a href="https://github.com/OpenST" class="btn btn-primary my-2 my-md-3" title="GITHUB" target="_blank">GITHUB</a>
             <a href="https://discuss.openst.org/" class="btn btn-secondary openst-forum my-2 my-md-3 ml-3 " title="PROTOCOL FORUM" target="_blank">PROTOCOL FORUM</a>
           </div>
         </div>
@@ -42,7 +42,7 @@
                 </svg>
                 <span>OPENST WHITE PAPER</span>
               </a>
-              <a href="https://github.com/OpenSTFoundation" class="github-link ml-md-3 mt-3 mt-md-0 d-inline-block" target="_blank" title="GITHUB">
+              <a href="https://github.com/OpenST/brandedtoken-contracts" class="github-link ml-md-3 mt-3 mt-md-0 d-inline-block" target="_blank" title="GITHUB">
                 <svg width="15" height="15">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-github-icon"></use>
@@ -75,7 +75,7 @@
                 </svg>
                 <span>MOSAIC WHITE PAPER</span>
               </a>
-              <a href="https://github.com/OpenSTFoundation/mosaic-contracts" class="github-link ml-md-3 mt-3 mt-md-0 d-inline-block" target="_blank" title="GITHUB">
+              <a href="https://github.com/OpenST/mosaic-contracts" class="github-link ml-md-3 mt-3 mt-md-0 d-inline-block" target="_blank" title="GITHUB">
                 <svg width="15" height="15">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-github-icon"></use>
