--- a/app/views/shared/web/common/_footer_links.erb
+++ b/app/views/shared/web/common/_footer_links.erb
@@ -20,7 +20,7 @@
             <li><a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" target="_blank" title="OpenSt Protocol">OpenST Protocol Whitepaper</a></li>
             <li><a href="https://github.com/OpenST/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" target="_blank" title="Mosaic Protocol">Mosaic Protocol Whitepaper</a></li>
             <li><a href="https://github.com/OpenST" target="_blank" title="OpenST Foundation Github">OpenST Foundation Github</a></li>
-            <li><a href="https://github.com/ostdotcom" target="_blank" title="OSTdotcom Github">OST</a></li>
+            <li><a href="https://github.com/ostdotcom" target="_blank" title="OST Github">OST Github</a></li>
             <li><a href="https://gitter.im/OpenSTFoundation/SimpleToken" target="_blank" title="Developer Chat">Developer Chat</a></li>
           </ul>
         </div>
