--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -143,7 +143,7 @@
                   </a>
                 </li>
                 <li class="mb-0 mb-md-2">
-                  <a href="https://github.com/orgs/ostdotcom/" target="_blank" class="nav-svg-link d-flex align-items-center" title="Ostdotcom Github">
+                  <a href="https://github.com/orgs/ostdotcom/" target="_blank" class="nav-svg-link d-flex align-items-center" title="OST Github">
                     <span class="pl-1">OST</span>
                   </a>
                 </li>
