--- a/app/assets/stylesheets/web/ost/index/EventsCarousel.scss
+++ b/app/assets/stylesheets/web/ost/index/EventsCarousel.scss
@@ -1,7 +1,7 @@
 $background-color : #f2f8f8 ;
 
 .container-upcoming-events{
-  background: white;
+  //background: white;
   .content-wrapper{
     min-height: 80px;
     overflow: hidden;
@@ -103,7 +103,7 @@ $background-color : #f2f8f8 ;
 
 .slick-slide{
   .bg-color {
-    padding: 0 7px;
+    //padding: 0 7px;
     margin: 10px;
     a{
       &:focus{
