--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -32,12 +32,12 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .container-jumbotron{
-  background: white;
+  background: $blue-900;
   h1{
     color: #438bad;
   }
   p{
-    color: #597a84;
+    color: $white;
     font-weight: 300;
     line-height: 1.6rem;
   }
