--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -1,7 +1,7 @@
 <section class="container-fluid container-partners py-5" id="partners">
   <div class="row">
     <div class="col col-lg-10 col-xl-9 mx-md-auto">
-      <div class="row">
+      <div class="row align-items-center">
         <div class="col-12 d-block d-lg-none text-center">
           <h2 class="header-blue-900">OST Partners</h2>
           <p>Billions of in-app transactions connecting hundreds of millions of users</p>
@@ -23,8 +23,8 @@
         </div>
         <div class="col-md-12 col-lg-6 text-center text-lg-left">
           <div class="d-none d-lg-block">
-            <h2 class="header-blue-900">OST Partners</h2>
-            <p>Billions of in-app transactions connecting <br/> hundreds of millions of users</p>
+            <h2 class="header-blue-900 mb-3">OST Partners</h2>
+            <p>Billions of App Actions<br/> Connecting Hundreds Of Millions Of Users</p>
           </div>
           <div class="row partners-companies mt-3">
             <div class="col-6 col-md-4 col-xl-3 my-3">
@@ -53,7 +53,7 @@
             </div>
           </div>
           <a href="/partners" class="btn btn-primary my-2 my-md-3" title="Meet Our Partners">MEET OUR PARTNERS</a>
-          <a href="/challenges-2" class="btn btn-secondary my-2 ml-sm-3 ml-lg-0 ml-xl-3 d-none d-md-inline-block" title="ALPHA CHALLENGES">ALPHA CHALLENGES</a>
+<!--          <a href="/challenges-2" class="btn btn-secondary my-2 ml-sm-3 ml-lg-0 ml-xl-3 d-none d-md-inline-block" title="ALPHA CHALLENGES">ALPHA CHALLENGES</a>-->
         </div>
         <div class="col-12 col-md-6 col-lg-6 d-none d-lg-block mt-3">
           <div class="play-video" id="partner-video">
@@ -70,15 +70,9 @@
             <div class="embed-responsive embed-responsive-16by9 video-iframe" data-src="https://www.youtube.com/embed/OlPu9ezzPzQ?enablejsapi=1&version=3&rel=0&autoplay=1" hidden>
             </div>
           </div>
-          <p class="mt-3 text-center">OST development partners reach more than 300 million end users.</p>
+          <p class="mt-3 mb-0 mx-4 text-center">The LGBT Foundation will be launching the LGBT Token to empower & connect LGBT+ people all over the world. <br/>Watch their POC</p>
         </div>
       </div>
     </div>
   </div>
 </section>
-
-<div style="height: 50px;background-color: #FFFFFF">
-  <svg viewBox="0 0 100 100" preserveAspectRatio="none" fill="#34445b" style="height: 50px;width: 100%;">
-    <polygon points="0,0 100,100 0,100"/>
-  </svg>
-</div>
