--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -1,7 +1,7 @@
 <nav id="menu" class="ost-nav w-100">
   <div class="container nav-container">
     <div class="row align-items-center">
-      <a class="navbar-brand ost-brand mr-0" href="<%= GlobalConstant::Base.root_url %>" title="OST">
+      <a class="navbar-brand ost-brand mr-0" href="<%= GlobalConstant::Base.root_url %>" title="OST" style="font-size: 0">
         <svg class="ost-nav-logo">
           <switch>
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-logo"></use>
