--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -32,14 +32,44 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .container-jumbotron{
-  background: $blue-900;
-  h1{
-    color: #438bad;
+  &.blue-bg{
+    background: $blue-900;
   }
+  &.white-bg{
+    background: $white;
+  }
+
+  .header-title{
+    //letter-spacing: 0.5px;
+    //text-transform: uppercase;
+    &.side-by-side{
+      font-weight: 400!important;
+      letter-spacing: 0.5px;
+      text-transform: uppercase;
+    }
+    &.white{
+      color: $white;
+    }
+    &.blue{
+      color: #438bad;
+    }
+  }
+
+  .desc{
+    &.white{
+      color: $white;
+    }
+    &.blue{
+      color: #6b7c93;
+    }
+  }
+  //h1{
+  //  color: #438bad;
+  //}
   p{
-    color: $white;
     font-weight: 300;
-    line-height: 1.6rem;
+    font-size: 0.9rem;
+    //line-height: 1.6rem;
   }
   .illustration{
     .btn-play{
@@ -248,46 +278,4 @@ h1, h2, h3, h4, h5, h6{
       width: 30px;
       vertical-align: middle;
     }
-  }
-
-.text-link{
-  color: #e4b030!important;
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 0.8rem;
-  letter-spacing: 4px;
-  display: inline-block;
-  position: relative;
-  padding: 10px 0;
-  &:hover{
-    text-decoration: none;
-    outline: none;
-    &:before, &:after{
-      -webkit-transform: scale(1);
-      -moz-transform: scale(1);
-      transform: scale(1);
-    }
-    &:after{
-      top: 0%;
-      opacity: 1;
-    }
-  }
-  &:before, &:after{
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background: #e4b030;
-    content: '';
-    -webkit-transition: -webkit-transform 0.3s;
-    -moz-transition: -moz-transform 0.3s;
-    transition: transform 0.3s;
-  }
-  &:after{
-    opacity: 0;
-    -webkit-transition: top 0.3s, opacity 0.3s, -webkit-transform 0.3s;
-    -moz-transition: top 0.3s, opacity 0.3s, -moz-transform 0.3s;
-    transition: top 0.3s, opacity 0.3s, transform 0.3s;
-  }
 }
