--- a/app/views/web/ost/index.html.erb
+++ b/app/views/web/ost/index.html.erb
@@ -1,10 +1,15 @@
 <%= render :partial => "/web/ost/index/uber_banner" %>
 <%= render :partial => "/shared/web/common/navbarsubmenu" %>
 <%= render :partial => "/web/ost/index/jumbotron-new" %>
-<%= render :partial => "/web/ost/index/jumbotron_mobile" %>
+<%#= render :partial => "/web/ost/index/jumbotron_mobile" %>
+<%= render :partial => "/web/ost/index/side_by_side_1" %>
+<%= render :partial => "/web/ost/index/side_by_side_2" %>
+<%= render :partial => "/web/ost/index/side_by_side_3" %>
+<%= render :partial => "/web/ost/index/side_by_side_4" %>
+<%= render :partial => "/web/ost/index/side_by_side_5" %>
 <%#= render :partial => "/web/ost/index/blockchain_infra" %>
 <%#= render :partial => "/web/ost/index/ost_kit" %>
-<%#= render :partial => "/web/ost/index/partners" %>
+<%= render :partial => "/web/ost/index/partners" %>
 <%#= render :partial => "/web/ost/index/liquidity_token_exchange"%>
 <%#= render :partial => "/web/ost/index/liquidity_token_exchange_mobile"%>
 <%#= render :partial => "/web/ost/index/roadmap" %>
