--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -3,31 +3,34 @@
   if ost_home_page_jumbotron.present?
 %>
 
-<div class="container-jumbotron py-5 d-none d-md-block">
-  <div class="container">
+<section class="container-jumbotron blue-bg py-6">
+  <div class="container pb-5 pb-lg-0">
     <div class="row align-items-center">
 
       <div class="col-md-12 col-lg-6">
-        <h3 class="header-blue-900"><%= ost_home_page_jumbotron[0]['jumbotron_title']%></h3>
-        <p class="mt-3">
+        <h3 class="header-title white"><%= ost_home_page_jumbotron[0]['jumbotron_title']%></h3>
+        <p class="mt-3 desc white">
           <%= ost_home_page_jumbotron[0]['jumbotron_description']%>
         </p>
         <% if ost_home_page_jumbotron[0]['primary_btn_enabled_flag'] == 'on' %>
           <a href="<%= ost_home_page_jumbotron[0]['primary_btn_link'] %>" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="<%= ost_home_page_jumbotron[0]['primary_btn_title'] %>"><%= ost_home_page_jumbotron[0]['primary_btn_title'] %></a>
         <% end %>
         <% if ost_home_page_jumbotron[0]['sec_btn_enabled_flag'] == 'on' %>
-          <a href="<%= ost_home_page_jumbotron[0]['sec_btn_link'] %>" class="btn btn-secondary my-2 ml-3 smooth-scroll" title="<%=ost_home_page_jumbotron[0]['sec_btn_title'] %>"><%= ost_home_page_jumbotron[0]['sec_btn_title']%></a>
+          <a href="<%= ost_home_page_jumbotron[0]['sec_btn_link'] %>" class="btn btn-secondary my-2 ml-sm-3 smooth-scroll" title="<%=ost_home_page_jumbotron[0]['sec_btn_title'] %>"><%= ost_home_page_jumbotron[0]['sec_btn_title']%></a>
         <%end%>
       </div>
 
     </div>
   </div>
-</div>
+</section>
 
 <%end%>
 
-<!--<div style="background-color: transparent;">-->
-<!--  <svg viewBox="0 0 100 100" preserveAspectRatio="none" fill="#34445b" style="height: 100px;width: 100%;">-->
+<!--<div class="edge blue" style="-->
+<!--    -webkit-transform: skewY(-5deg);-->
+<!--    transform: skewY(-5deg);-->
+<!--    transform-origin: 0 0;">-->
+<!--  <svg viewBox="0 0 100 100" preserveAspectRatio="none" fill="#34445b" style="height: 130px;width: 100%;">-->
 <!--    <polygon points="0,0 100,0 0,100"/>-->
 <!--  </svg>-->
 <!--</div>-->
