--- a/app/views/web/ost/index/_side_by_side_1.erb
+++ b/app/views/web/ost/index/_side_by_side_1.erb
@@ -8,7 +8,7 @@
           <p class="mt-3 desc blue">
             Launch your own brand tokens and deploy them to encourage and reward customer behaviors, and to drive your key engagement and growth metrics.
           </p>
-          <a href="https://view.ost.com/" class="text-link" target="_blank" title="Deploy Your Brand Currency">Deploy Your Brand Currency</a>
+          <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Deploy Your Brand Currency">Deploy Your Brand Currency</a>
         </div>
 
         <div class="col-md-12 col-lg-6 text-center order-1 order-lg-2">
