--- a/app/views/web/ost/index/_side_by_side_2.erb
+++ b/app/views/web/ost/index/_side_by_side_2.erb
@@ -29,7 +29,7 @@
           <p class="mt-3 desc white">
             Build direct relationships with your customers and cut out the middlemen from transactions, saving you and your customers on extraneous fees.
           </p>
-          <a href="https://view.ost.com/" class="text-link" target="_blank" title="Explore OST Platform">Explore OST Platform</a>
+          <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Explore OST Platform">Explore OST Platform</a>
         </div>
 
       </div>
