--- a/app/views/web/ost/index/_side_by_side_3.erb
+++ b/app/views/web/ost/index/_side_by_side_3.erb
@@ -8,7 +8,7 @@
           <p class="mt-3 desc blue">
             OST clients benefit from interoperability across the OST Network. Enable your users to easily swap your brand currency for other digital currencies and gift cards. OST also enables you to earn commissions on every redemption.
           </p>
-          <a href="https://view.ost.com/" class="text-link" target="_blank" title="Discover OST Network">Discover OST Network</a>
+          <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Discover OST Network">Discover OST Network</a>
         </div>
 
         <div class="col-md-12 col-lg-6 text-center">
