--- a/app/views/web/ost/index/_side_by_side_4.erb
+++ b/app/views/web/ost/index/_side_by_side_4.erb
@@ -29,7 +29,7 @@
           <p class="mt-3 desc white">
             OST Platform includes user friendly wallet solutions to enable your users to hold and transact with your brand currency from within your existing app, as easy as sending a tweet or sharing a photo.
           </p>
-          <a href="https://view.ost.com/" class="text-link" target="_blank" title="Integrate OST Platform">Integrate OST Platform</a>
+          <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Integrate OST Platform">Integrate OST Platform</a>
         </div>
 
       </div>
