--- a/app/views/web/ost/index/_side_by_side_5.erb
+++ b/app/views/web/ost/index/_side_by_side_5.erb
@@ -8,7 +8,7 @@
           <p class="mt-3 desc blue">
             OST Platform gives you everything you need to test, integrate, and deploy your brand currency. Our APIs, SDKs, dashboards enable fast and painless integration into any app so you can focus on your businesses and leave the blockchain parts to us.
           </p>
-          <a href="https://view.ost.com/" class="text-link" target="_blank" title="DOCS & APIs">DOCS & APIs</a>
+          <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="DOCS & APIs">DOCS & APIs</a>
         </div>
 
         <div class="col-md-12 col-lg-6 text-center py-5">
