--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -12,8 +12,8 @@ h1, h2, h3, h4, h5, h6{
 // Uber banner CSS
 .uber-banner-winners{
   background-color:  $blue-900;
-  padding-top: 12px;
-  padding-bottom: 12px;
+  //padding-top: 12px;
+  //padding-bottom: 12px;
   letter-spacing: 0.6px;
   a{
     color: $white;
@@ -71,6 +71,18 @@ h1, h2, h3, h4, h5, h6{
     font-size: 0.9rem;
     //line-height: 1.6rem;
   }
+
+  .openst-forum {
+    border: 1.5px solid $white !important;
+    color: $white !important;
+    background-color: $blue-900 !important;
+    &:hover {
+      border: 1.5px solid $white !important;
+      color: $blue-900 !important;
+      background-color: $white !important;
+    }
+  }
+
   .illustration{
     .btn-play{
       width: 54px;
