--- a/app/assets/stylesheets/web/ost/index/Partners.scss
+++ b/app/assets/stylesheets/web/ost/index/Partners.scss
@@ -63,6 +63,7 @@ $sprite-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-home-page
   background-color: $blue-900;
   h2{
     letter-spacing: 1px;
+    color: $white;
     font-weight: 500!important;
   }
   p{
