--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -3,7 +3,7 @@
     <div class="col col-lg-10 col-xl-9 mx-md-auto">
       <div class="row align-items-center">
         <div class="col-12 d-block d-lg-none text-center">
-          <h2 class="header-blue-900">OST Partners</h2>
+          <h2 class="header-title white">OST Partners</h2>
           <p>Billions of in-app transactions connecting hundreds of millions of users</p>
           <div class="play-video" id="partner-video-mobile">
             <div class="video-image">
