--- a/app/views/web/ost/index/_side_by_side_2.erb
+++ b/app/views/web/ost/index/_side_by_side_2.erb
@@ -25,7 +25,7 @@
         </div>
 
         <div class="col-md-12 col-lg-4 mx-auto text-right py-6">
-          <h5 class="header-title white side-by-side">Direct to Consume</h5>
+          <h5 class="header-title white side-by-side">Direct to Consumer</h5>
           <p class="mt-3 desc white">
             Build direct relationships with your customers and cut out the middlemen from transactions, saving you and your customers on extraneous fees.
           </p>
