--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -40,7 +40,7 @@ h1, h2, h3, h4, h5, h6{
   }
 
   .header-title{
-    //letter-spacing: 0.5px;
+    letter-spacing: 0.5px;
     //text-transform: uppercase;
     &.side-by-side{
       font-weight: 400!important;
