--- a/app/views/web/ost/index/_side_by_side_1.erb
+++ b/app/views/web/ost/index/_side_by_side_1.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row align-items-center skew-postive">
 
-        <div class="col-md-12 col-lg-5 mx-auto text-right order-2 order-lg-1 pb-6 pb-lg-0 mb-5 mb-lg-0">
+        <div class="col-10 col-lg-5 mx-auto text-right order-2 order-lg-1 pb-6 pb-lg-0">
           <h5 class="header-title blue side-by-side">Deploy Your Brand Currency</h5>
           <p class="mt-3 desc blue">
             Launch your own brand tokens and deploy them to encourage and reward customer behaviors, and to drive your key engagement and growth metrics.
