--- a/app/views/web/ost/index/_side_by_side_3.erb
+++ b/app/views/web/ost/index/_side_by_side_3.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row align-items-center skew-postive">
 
-        <div class="col-md-12 col-lg-5 mx-auto text-right py-6">
+        <div class="col-10 col-lg-5 mx-auto text-right order-2 order-lg-1 pb-6 pb-lg-0">
           <h5 class="header-title blue side-by-side">Interoperability</h5>
           <p class="mt-3 desc blue">
             OST clients benefit from interoperability across the OST Network. Enable your users to easily swap your brand currency for other digital currencies and gift cards. OST also enables you to earn commissions on every redemption.
@@ -11,8 +11,8 @@
           <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Discover OST Network">Discover OST Network</a>
         </div>
 
-        <div class="col-md-12 col-lg-6 text-center">
-          <div class="row align-items-end">
+        <div class="col-md-12 col-lg-6 text-center order-1 order-lg-2">
+          <div class="row align-items-end align-items-md-enter justify-content-end">
             <div class="col-4 col-lg-5">
               <img class="img-fluid responsively-lazy rotate-left"
                    src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-1.png"
