--- a/app/views/web/ost/index/_side_by_side_4.erb
+++ b/app/views/web/ost/index/_side_by_side_4.erb
@@ -24,7 +24,7 @@
           </div>
         </div>
 
-        <div class="col-md-12 col-lg-5 mx-auto text-right py-6">
+        <div class="col-8 col-lg-5 mx-auto text-right pt-4 pb-6 pt-lg-0 pb-lg-0">
           <h5 class="header-title white side-by-side">Desinged for the mainstream</h5>
           <p class="mt-3 desc white">
             OST Platform includes user friendly wallet solutions to enable your users to hold and transact with your brand currency from within your existing app, as easy as sending a tweet or sharing a photo.
@@ -35,4 +35,9 @@
       </div>
     </div>
   </div>
+
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" style="width: 100%;height: 5vw;">
+    <polygon fill="#ffffff" points="0,100 100,0 100,100"></polygon>
+  </svg>
+
 </section>
