--- a/app/views/web/ost/index/_side_by_side_5.erb
+++ b/app/views/web/ost/index/_side_by_side_5.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row align-items-center">
 
-        <div class="col-10 col-lg-5 mx-auto text-right order-2 order-lg-1 pb-5 pb-lg-0">
+        <div class="col-10 col-md-8 col-lg-5 text-right order-2 order-lg-1 pb-5 pb-lg-0 mr-auto ml-lg-auto mr-lg-auto">
           <h5 class="header-title blue side-by-side">Seamless Integration</h5>
           <p class="mt-3 desc blue">
             OST Platform gives you everything you need to test, integrate, and deploy your brand currency. Our APIs, SDKs, dashboards enable fast and painless integration into any app so you can focus on your businesses and leave the blockchain parts to us.
