--- a/app/views/web/ost/index/_events_carousel.erb
+++ b/app/views/web/ost/index/_events_carousel.erb
@@ -13,7 +13,7 @@
 %>
 
 <!--<section class="container-fluid container-upcoming-events pb-4">-->
-  <div class="row container-upcoming-events" id="ost-events">
+  <div class="row container-upcoming-events">
     <div class="container">
       <h3 class="mx-2 my-5" style="font-weight: 500!important;">OST News & Events</h3>
       <div style="min-height: 80px;">
