--- a/app/views/web/ost/index/_side_by_side_1.erb
+++ b/app/views/web/ost/index/_side_by_side_1.erb
@@ -6,7 +6,7 @@
         <div class="col-10 col-md-8 col-lg-5 text-right order-2 order-lg-1 pb-6 pb-lg-0 mr-auto ml-lg-auto mr-lg-auto">
           <h5 class="header-title blue side-by-side">Deploy Your Brand Currency</h5>
           <p class="mt-3 desc blue">
-            Launch your own brand tokens and deploy them to encourage and reward customer behaviors, and to drive your key engagement and growth metrics.
+            Use your brand tokens to encourage and reward customer behaviors, strengthen loyalty, and to drive your engagement and growth metrics.
           </p>
           <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Deploy Your Brand Currency">Deploy Your Brand Currency</a>
         </div>
