--- a/app/views/web/ost/index/_side_by_side_2.erb
+++ b/app/views/web/ost/index/_side_by_side_2.erb
@@ -27,7 +27,7 @@
         <div class="col-10 col-md-8 col-lg-5 text-right pt-4 pb-6 pt-lg-0 pb-lg-0 ml-auto ml-lg-auto mr-lg-auto">
           <h5 class="header-title white side-by-side">Direct to Consumer</h5>
           <p class="mt-3 desc white">
-            Build direct relationships with your customers and cut out the middlemen from transactions, saving you and your customers on extraneous fees.
+            Build direct relationships with your customers. Cut out the middlemen from transactions, saving you and your customers on extra steps and fees.
           </p>
           <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Explore OST Platform">Explore OST Platform</a>
         </div>
