--- a/app/views/web/ost/index/_side_by_side_3.erb
+++ b/app/views/web/ost/index/_side_by_side_3.erb
@@ -6,7 +6,7 @@
         <div class="col-10 col-md-8 col-lg-5 text-right order-2 order-lg-1 pb-6 pb-lg-0 mr-auto ml-lg-auto mr-lg-auto">
           <h5 class="header-title blue side-by-side">Interoperability</h5>
           <p class="mt-3 desc blue">
-            OST clients benefit from interoperability across the OST Network. Enable your users to easily swap your brand currency for other digital currencies and gift cards. OST also enables you to earn commissions on every redemption.
+            Enable your users to easily swap your brand token within the OST Network. You decide which options to include. OST also enables you to earn fees on every redemption.
           </p>
           <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Discover OST Network">Discover OST Network</a>
         </div>
