--- a/app/views/web/ost/index/_side_by_side_4.erb
+++ b/app/views/web/ost/index/_side_by_side_4.erb
@@ -25,9 +25,9 @@
         </div>
 
         <div class="col-10 col-md-8 col-lg-5 text-right pt-4 pb-6 pt-lg-0 pb-lg-0 ml-auto ml-lg-auto mr-lg-auto">
-          <h5 class="header-title white side-by-side">Desinged for the mainstream</h5>
+          <h5 class="header-title white side-by-side">User Friendly Design</h5>
           <p class="mt-3 desc white">
-            OST Platform includes user friendly wallet solutions to enable your users to hold and transact with your brand currency from within your existing app, as easy as sending a tweet or sharing a photo.
+            OST Platform includes user friendly wallet solutions to enable users to safely hold and transact with your brand currency within your existing app.
           </p>
           <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Integrate OST Platform">Integrate OST Platform</a>
         </div>
@@ -36,7 +36,7 @@
     </div>
   </div>
 
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" style="width: 100%;height: 5vw;">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" style="width: 100%;height: 10vw;">
     <polygon fill="#ffffff" points="0,100 100,0 100,100"></polygon>
   </svg>
 
