--- a/app/views/shared/web/common/_footer_links.erb
+++ b/app/views/shared/web/common/_footer_links.erb
@@ -1,7 +1,8 @@
 <section class="container-fluid footer-nav-wrap position-relative" style="overflow: hidden">
   <div class="row">
-    <div class="ost-backward-triangle"></div>
-    <div class="ost-triangleSpace"></div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" style="width: 100%;height: 10vw;">
+      <polygon fill="#ffffff" points="0,0 100,0 0,100"></polygon>
+    </svg>
     <div class="container">
       <div class="row pt-5">
         <div class="col-12 col-md mb-3 mb-sm-0">
