--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -3,7 +3,7 @@
   if ost_home_page_jumbotron.present?
 %>
 
-<section class="container-jumbotron blue-bg py-6">
+<section class="container-jumbotron midnight-blue pt-6">
   <div class="container pb-5 pb-lg-0">
     <div class="row align-items-center">
 
@@ -25,6 +25,10 @@
 </section>
 
 <%end%>
+
+<svg viewBox="0 0 100 100" preserveAspectRatio="none" fill="#34445b" style="height: 5vw;width: 100%">
+  <polygon points="0,0 100,0 0,100"/>
+</svg>
 
 <!--<div class="edge blue" style="-->
 <!--    -webkit-transform: skewY(-5deg);-->
