--- a/app/views/web/ost/index/_side_by_side_1.erb
+++ b/app/views/web/ost/index/_side_by_side_1.erb
@@ -1,9 +1,9 @@
-<section class="container-jumbotron blue-bg">
-  <div class="container-jumbotron white-bg skew-negative">
+<section class="container-jumbotron">
+<!--  <div class="container-jumbotron white-bg skew-negative">-->
     <div class="container">
       <div class="row align-items-center skew-postive">
 
-        <div class="col-10 col-md-8 col-lg-5 text-right order-2 order-lg-1 pb-6 pb-lg-0 mr-auto ml-lg-auto mr-lg-auto">
+        <div class="col-10 col-md-8 col-lg-5 order-2 order-lg-1 pb-6 pb-lg-0 mr-auto ml-lg-auto mr-lg-auto">
           <h5 class="header-title blue side-by-side">Deploy Your Brand Currency</h5>
           <p class="mt-3 desc blue">
             Use your brand tokens to encourage and reward customer behaviors, strengthen loyalty, and to drive your engagement and growth metrics.
@@ -13,16 +13,16 @@
 
         <div class="col-md-12 col-lg-6 text-center order-1 order-lg-2">
           <div class="row align-items-end align-items-md-enter justify-content-end">
-            <div class="col-4 col-lg-5">
-              <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-1.png" class="img-fluid rotate-left"/>
-            </div>
-            <div class="col-5 col-lg-6 pl-0">
-              <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-2.png" class="img-fluid rotate-left"/>
-            </div>
+<!--            <div class="col-4 col-lg-5">-->
+              <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-3@2x.png" class="img-fluid push-top"/>
+<!--            </div>-->
+<!--            <div class="col-5 col-lg-6 pl-0">-->
+<!--              <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-2.png" class="img-fluid rotate-left"/>-->
+<!--            </div>-->
           </div>
         </div>
 
       </div>
     </div>
-  </div>
+<!--  </div>-->
 </section>
