--- a/app/views/web/ost/index/_side_by_side_3.erb
+++ b/app/views/web/ost/index/_side_by_side_3.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row align-items-center skew-postive">
 
-        <div class="col-10 col-md-8 col-lg-5 text-right order-2 order-lg-1 pb-6 pb-lg-0 mr-auto ml-lg-auto mr-lg-auto">
+        <div class="col-10 col-md-8 col-lg-5 order-2 order-lg-1 pb-6 pb-lg-0 mr-auto ml-lg-auto mr-lg-auto">
           <h5 class="header-title blue side-by-side">Interoperability</h5>
           <p class="mt-3 desc blue">
             Enable your users to easily swap your brand token within the OST Network. You decide which options to include. OST also enables you to earn fees on every redemption.
@@ -12,24 +12,24 @@
         </div>
 
         <div class="col-md-12 col-lg-6 text-center order-1 order-lg-2">
-          <div class="row align-items-end align-items-md-enter justify-content-end">
-            <div class="col-4 col-lg-5">
+<!--          <div class="row align-items-end align-items-md-enter justify-content-end">-->
+<!--            <div class="col-4 col-lg-5">-->
               <img class="img-fluid responsively-lazy rotate-left"
-                   src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-1.png"
-                   data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-1.png"
+                   src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-3@2x.png"
+                   data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-3@2x.png"
                    srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
                    alt="OST - "
                 />
-            </div>
-            <div class="col-5 col-lg-6 pl-0">
-              <img class="img-fluid responsively-lazy rotate-left"
-                   src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-2.png"
-                   data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-2.png"
-                   srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
-                   alt="OST - "
-                />
-            </div>
-          </div>
+<!--            </div>-->
+<!--            <div class="col-5 col-lg-6 pl-0">-->
+<!--              <img class="img-fluid responsively-lazy rotate-left"-->
+<!--                   src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-2.png"-->
+<!--                   data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-2.png"-->
+<!--                   srcset="<%#= raw GlobalConstant::Base.placeholder_image_src %>"-->
+<!--                   alt="OST - "-->
+<!--                />-->
+<!--            </div>-->
+<!--          </div>-->
         </div>
 
       </div>
