--- a/app/views/web/ost/index/_side_by_side_5.erb
+++ b/app/views/web/ost/index/_side_by_side_5.erb
@@ -1,9 +1,9 @@
-<section class="container-jumbotron blue-bg">
-  <div class="container-jumbotron white-bg">
+<section class="container-jumbotron py-6">
+<!--  <div class="container-jumbotron white-bg">-->
     <div class="container">
       <div class="row align-items-center">
 
-        <div class="col-10 col-md-8 col-lg-5 text-right order-2 order-lg-1 pb-5 pb-lg-0 mr-auto ml-lg-auto mr-lg-auto">
+        <div class="col-10 col-md-8 col-lg-5 order-2 order-lg-1 pb-5 pb-lg-0 mr-auto ml-lg-auto mr-lg-auto">
           <h5 class="header-title blue side-by-side">Seamless Integration</h5>
           <p class="mt-3 desc blue">
             OST Platform provides everything you need to test, integrate, and deploy your brand currency. Our APIs, SDKs, dashboards enable fast and painless integration into any app -- so you can focus on your business and leave the blockchain bits to us.
@@ -11,10 +11,10 @@
           <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="DOCS & APIs">DOCS & APIs</a>
         </div>
 
-        <div class="col-md-12 col-lg-6 text-center order-1 order-lg-2 pt-6 pt-lg-0">
+        <div class="col-md-12 col-lg-7 text-center order-1 order-lg-2 pt-6 pt-lg-0">
           <img class="img-fluid responsively-lazy rotate-left"
-               src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-ipad.png"
-               data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-ipad.png"
+               src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-seamless-integration-3@2x.png"
+               data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-seamless-integration-3@2x.png"
                srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
                alt="OST - "
             />
@@ -22,5 +22,5 @@
 
       </div>
     </div>
-  </div>
+<!--  </div>-->
 </section>
